src/LinkDotNet.Blog.Web/Features/ShowBlogPost/ShowBlogPostPage.razor.css
.blog-outer-box {
    display: flex;
    justify-content: center;
    padding-top: 10px;
}
.blog-container {
    background: white;
    width: clamp(60%, 2vw, 90%);
    box-shadow: 0 3px 7px -1px rgba(0, 0, 0, 0.1);
    border-radius: 5px;
    padding: 20px;
}

.blogpost-date {
    color: lightgrey;
}

.blogpost-tag:before {
    font-family: 'icons';
    font-weight: 900;
    content: "\e936";
}

.blogpost-content {
    padding-top: 20px;
    overflow-x: hidden;
}

.blogpost-content img {
    width: 100%;
    height: 100%;
    object-fit: cover;
}

@media only screen and (max-width: 700px) {
    .blog-outer-box .blog-container {
        width: 90%;
    }
}

@media only screen and (min-width: 700px) and (max-width: 1024px) {
    .blog-outer-box .blog-container {
        width: 80%;
    }
}

